[package]
name = "serenIT"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = {version="0.19.0", features=["minimp3","symphonia-wav","flac"],default-features = false}
color-eyre = "0.6.3"
ratatui = "0.29.0"
cli-log = "2.1.0"
serde = { version ="1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
homedir = "0.3.4"
